# p-div-gnn

./: README.md  pyproject.toml
gnn_local_stress/: _version.py  convert_utils.py  data_utils.py  datasets.py  models.py
scripts/: benchmark_gnn_fem.py  compare_results.py  generate_dataset.py  generate_dataset_hyperelast.py  gnn_inference.py  gnn_train.py  plot_benchmark.py  plot_periodic_mesh.py
scripts/configs_inference/: config_inference_div.yml  config_inference_div_hyperelast.yml  config_inference_no_div.yml  config_inference_no_div_hyperelast.yml  config_inference_no_periodic.yml
scripts/configs_train/: config_train_div.yml  config_train_div_hyperelast.yml  config_train_no_div.yml  config_train_no_div_hyperelast.yml  config_train_no_periodic.yml
test/: __init__.py  test_graph_utils.py
